# rdmo-plugins-radar

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
testing/config/settings/: local.py
tests/: conftest.py  test_plugin.py
