[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rdmo-plugins-radar"
authors = [
    {name = "RDMO Arbeitsgemeinschaft", email = "rdmo-team@listserv.dfn.de"},
]
maintainers = [
    {name = "Jochen Klar", email = "mail@jochenklar.de"},
]
description = "Plugins to connect RDMO with RADAR"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django :: 2.2',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    "rdmo",
]
dynamic = ["version"]

[project.optional-dependencies]
ci = [
  "rdmo-plugins-radar[dev]",
]
dev = [
  "pre-commit~=3.5",
  "rdmo[dev]~=2.0",
]

[project.urls]
repository = "https://github.com/rdmorganiser/rdmo-plugins-radar"

[tool.setuptools]
packages = ["rdmo_radar"]

[tool.setuptools.dynamic]
version = {attr = "rdmo_radar.__version__"}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["testing"]
testpaths = ["tests"]
filterwarnings = [
  # ignore warnings raised from within coreapi 2.3.3
  "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
  "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "B006",   # mutable-argument-default
  "B007",   # unused-loop-control-variable
  "B018",   # useless-expression
  "RUF012", # mutable-class-default
]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "pytest",
  "django",
  "rest_framework",
  "third-party",
  "rdmo",
  "first-party",
  "local-folder"
]

[tool.ruff.lint.isort.sections]
pytest = ["pytest"]
django = ["django"]
rest_framework = ["rest_framework"]
rdmo = ["rdmo"]
